...

internal enum class Glyph(val code: Int) {
    Back(0xf127),
    Previous(0xf229),
    Next(0xf23b),
    Close(0xf24a),
    Clear(0xf24b),
    Search(0xf563),
    Receipt(0xf50f),
    Dining(0xf536),
    Bag(0xf15f),
    Cash(0xf206),
    Cube(0xf299),
...
